--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,7 +4,9 @@
 		<meta charset="utf-8">
 		<title>zym图书商城</title>
 		<style type="text/css">
-			html{background:aliceblue;}
+			/* html{background:aliceblue;} */
+			html{background:url(img/bg6.jpg);}
+			body{font-family:"华文楷体";font-size:20px}
 			td {
             width: auto;
             height: 25px;
@@ -19,25 +21,29 @@
 	height:35px;
 	text-align:center;
 	line-height:35px;
-	border-radius:5px;
+	border-radius:5px; 
 	background-color:#B2B7BC;
 }
-        #box1{
+      /*   #box1{
 		   border: #B2B7BC solid 3px;;
-	   }
+	   } */
 		</style>
 	</head>
 	<body>
 		<div id="box1">
-	<center>欢迎来到zym图书商城</center>
-	<p>欢迎选购图书，您可以根据图书名搜索图书.<br>
-	本网站创办于1998年，通过好书推荐、畅销书、淘书团、特色专题等栏目及各种促销活动，致力于为读者提供价廉物美的正版优质书籍，是爱书人的淘书圣地。
-	<br>打造为国内领先的古旧书交易平台，汇集全国各地13000家网上书店，50000家书摊，展示多达9000万种书籍；大量极具收藏价值的古旧珍本（明清、民国古籍善本，珍品期刊，名人墨迹，民国珍本，绝版书等）
+	<center><h1>图书销售管理系统</h1></center>
+	<p>
+	<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;随着因特网的发展，网上书店的规模在不断拓展，功能在不断完善、提升。
+	它不仅改变了传统的图书销售方式，也正在改变图书馆文献采访的传统模式与规则及其理论。
+	图书发行量不断增加实际上也是读者对图书的需求不断扩大的真实写照。<br> -->
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本网站创办于2019年，是一家新兴的网上图书商城，致力于为读者提供价廉物美的正版优质书籍，是爱书人的淘书圣地。
+	本站的目标是汇集全国各地13000家网上书店，50000家书摊，展示多达9000万种书籍；以及大量极具收藏价值的古旧珍本（明清、民国古籍善本，珍品期刊，名人墨迹，民国珍本，绝版书等）。
 	<br>
-	在孔网展示与交易，吸引了大量的学者、研究人员和藏书人长时间在线关注并参与。
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在本站注册成为商城用户后，可以进行商品查看、添加商品到购物车，并设置收货地址，填写相关收货信息，确认一切无误后，生成订单再在线支付，等待图书管理员以邮递的形式将实体书寄给用户。您还可以进行购物车管理以及查看订单、查看销售信息等操作。
 	
 	</p>
-	<table>
+	<center>
+	<table style="float:center">
 		<tr height="50">
 		<td align="center" >
 			<a class="login" href="login.jsp">会员登录</a>
@@ -46,12 +52,13 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a class="salesinfo" href="salesinfo.jsp">销售信息</a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a class="adminlogin" href="adminlogin.jsp">管理员登录</a>
+			<a class="adminlogin" href="adminlogin.jsp">后台登录</a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</td>
 		
 	</tr>
 	</table>
+	</center>
 	
 </div>
 	</body>
